AN1 files save option

--- a/QAN1xEditor.qrc
+++ b/QAN1xEditor.qrc
@@ -27,5 +27,6 @@
     </qresource>
     <qresource prefix="/">
         <file>resources/an1x.png</file>
+        <file>resources/AN1xEdit.an1</file>
     </qresource>
 </RCC>
