--- a/src/View/FreeEGWidget.ui
+++ b/src/View/FreeEGWidget.ui
@@ -92,7 +92,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>71</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -105,7 +105,7 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>81</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -144,7 +144,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>71</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -157,7 +157,7 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>81</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -283,98 +283,6 @@
      </property>
     </item>
    </widget>
-  </widget>
-  <widget class="QLabel" name="label_9">
-   <property name="geometry">
-    <rect>
-     <x>800</x>
-     <y>280</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Trigger:</string>
-   </property>
-  </widget>
-  <widget class="ComboPicker" name="loopCombo">
-   <property name="geometry">
-    <rect>
-     <x>580</x>
-     <y>280</y>
-     <width>111</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>1</number>
-   </property>
-   <item>
-    <property name="text">
-     <string>Off</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Forward</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Forward Half</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Alternate</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Alternate Half</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="ComboPicker" name="triggerCombo">
-   <property name="geometry">
-    <rect>
-     <x>850</x>
-     <y>280</y>
-     <width>121</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>1</number>
-   </property>
-   <item>
-    <property name="text">
-     <string>Free</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Keyboard + Midi</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>All</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLabel" name="label_10">
-   <property name="geometry">
-    <rect>
-     <x>540</x>
-     <y>280</y>
-     <width>41</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Loop:</string>
-   </property>
   </widget>
   <widget class="QGroupBox" name="groupTrack_3">
    <property name="geometry">
@@ -520,74 +428,169 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QComboBox" name="currentTrackCombo">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>10</x>
      <y>280</y>
-     <width>81</width>
-     <height>22</height>
+     <width>1041</width>
+     <height>32</height>
     </rect>
    </property>
-   <item>
-    <property name="text">
-     <string>Track 1</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Track 2</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Track 3</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>Track 4</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>280</y>
-     <width>101</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Current track edit:</string>
-   </property>
-  </widget>
-  <widget class="ComboPicker" name="lengthCombo">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>280</y>
-     <width>111</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>-1</number>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_12">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>280</y>
-     <width>49</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Legnth:</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string>Current track edit:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="currentTrackCombo">
+      <item>
+       <property name="text">
+        <string>Track 1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Track 2</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Track 3</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Track 4</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_12">
+      <property name="text">
+       <string>Legnth:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="ComboPicker" name="lengthCombo">
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>Loop:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="ComboPicker" name="loopCombo">
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <item>
+       <property name="text">
+        <string>Off</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Forward</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Forward Half</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Alternate</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Alternate Half</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string>Trigger:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="ComboPicker" name="triggerCombo">
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <item>
+       <property name="text">
+        <string>Free</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Keyboard + Midi</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>All</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
