listWidget width change

--- a/src/View/Browser.ui
+++ b/src/View/Browser.ui
@@ -53,13 +53,13 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>151</width>
+            <width>0</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>171</width>
+            <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
