--- a/src/View/Browser.ui
+++ b/src/View/Browser.ui
@@ -46,7 +46,7 @@
         <item>
          <widget class="MemoryList" name="An1xList">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <sizepolicy hsizetype="Ignored" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
