--- a/src/View/FreeEGWidget.ui
+++ b/src/View/FreeEGWidget.ui
@@ -486,6 +486,40 @@
      </spacer>
     </item>
     <item>
+     <widget class="QLabel" name="label_13">
+      <property name="text">
+       <string>Reset mode:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="resetMode">
+      <item>
+       <property name="text">
+        <string>Original value</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Null value</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_5">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
      <widget class="QLabel" name="label_12">
       <property name="text">
        <string>Legnth:</string>
@@ -605,13 +639,6 @@
        </size>
       </property>
      </spacer>
-    </item>
-    <item>
-     <widget class="QCheckBox" name="resetToZeroCheck">
-      <property name="text">
-       <string>Right mouse click full reset</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
