--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -1582,6 +1582,39 @@
                <number>0</number>
               </property>
               <item>
+               <widget class="QLabel" name="label_17">
+                <property name="text">
+                 <string>Device No:</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QSpinBox" name="deviceSpin">
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>16</number>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_9">
+                <property name="orientation">
+                 <enum>Qt::Orientation::Horizontal</enum>
+                </property>
+                <property name="sizeType">
+                 <enum>QSizePolicy::Policy::Preferred</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item>
                <widget class="QLabel" name="label_14">
                 <property name="text">
                  <string>MIDI send chаnnel:</string>
